[package]
name = "v8-ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
v8 = "0.41.0"
libffi-sys = "2.0.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winnt", "minwindef", "winerror", "libloaderapi", "errhandlingapi", "dbghelp", "processthreadsapi", "basetsd"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.79"
